--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@atomist/sdm-core": "^1.6.1",
     "@atomist/sdm-pack-build": "^1.0.4",
     "@atomist/sdm-pack-docker": "^1.1.0",
-    "@atomist/sdm-pack-k8s": "^1.7.1",
+    "@atomist/sdm-pack-k8s": "1.8.0-master.20190807123615",
     "@atomist/sdm-pack-node": "^1.0.3",
     "@atomist/slack-messages": "^1.1.1",
     "@kubernetes/client-node": "^0.10.2",
