Give access to namespace when namespace-scoped
Grant read access to namespace in namespace-scoped role.  This only
grants access to the current namespace.

--- a/assets/kubectl/namespace-scoped.yaml
+++ b/assets/kubectl/namespace-scoped.yaml
@@ -19,6 +19,9 @@ metadata:
   name: k8s-sdm
 rules:
   - apiGroups: [""]
+    resources: ["namespaces"]
+    verbs: ["get", "list", "watch"]
+  - apiGroups: [""]
     resources: ["pods", "secrets", "serviceaccounts", "services"]
     verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
   - apiGroups: ["apps", "extensions"]
