--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
   "main": "./index.js",
   "types": "./index.d.ts",
   "dependencies": {
-    "@atomist/automation-client": "^1.7.0",
+    "@atomist/automation-client": "^1.8.0-master.20191028235651",
     "@atomist/automation-client-ext-humio": "^0.2.0",
     "@atomist/automation-client-ext-logzio": "^1.0.2",
     "@atomist/sdm": "^1.7.0",
     "@atomist/sdm-core": "^1.7.0",
     "@atomist/sdm-pack-build": "^1.0.6-master.20190903202948",
     "@atomist/sdm-pack-docker": "^1.1.0",
-    "@atomist/sdm-pack-k8s": "^1.10.2",
+    "@atomist/sdm-pack-k8s": "^1.11.0-master.20191101160859",
     "@atomist/sdm-pack-node": "^1.0.3",
     "@atomist/slack-messages": "^1.1.1",
     "@kubernetes/client-node": "^0.10.2",
