--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@atomist/k8s-sdm",
-  "version": "1.7.0",
+  "version": "2.0.0",
   "description": "Atomist SDM for deploying, updating, and removing Kubernetes applications",
   "author": {
     "name": "Atomist",
@@ -25,24 +25,16 @@
   "main": "./index.js",
   "types": "./index.d.ts",
   "dependencies": {
-    "@atomist/automation-client": "^1.8.0-master.20191028235651",
+    "@atomist/automation-client": "^2.0.0-master.20191213160252",
     "@atomist/automation-client-ext-humio": "^0.2.0",
     "@atomist/automation-client-ext-logzio": "^1.0.2",
-    "@atomist/sdm": "^1.7.0",
-    "@atomist/sdm-core": "^1.7.0",
-    "@atomist/sdm-pack-build": "^1.0.6-master.20190903202948",
-    "@atomist/sdm-pack-docker": "^1.1.0",
-    "@atomist/sdm-pack-k8s": "^1.11.0-master.20191202200245",
-    "@atomist/sdm-pack-node": "^1.0.3",
+    "@atomist/sdm": "^2.0.0-master.20191213214023",
+    "@atomist/sdm-core": "^2.0.0-simplify-k8s-scheduler.20191217162734",
+    "@atomist/sdm-pack-gcp": "0.1.0-master.20191208110459",
+    "@atomist/sdm-pack-k8s": "^2.0.0-k8s-scheduler.20191218132958",
     "@atomist/slack-messages": "^1.1.1",
-    "@kubernetes/client-node": "^0.10.2",
-    "@types/inquirer": "0.0.43",
     "@types/lodash": "^4.14.136",
-    "@types/read-pkg-up": "^3.0.1",
-    "inquirer": "^6.2.2",
-    "lodash": "^4.17.15",
-    "read-pkg-up": "^5.0.0",
-    "ts-essentials": "^2.0.3"
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
     "@atomist/sdm-local": "^1.2.1",
@@ -54,10 +46,10 @@
     "power-assert": "^1.6.1",
     "rimraf": "^2.6.3",
     "supervisor": "^0.12.0",
-    "ts-node": "^8.3.0",
-    "tslint": "^5.19.0",
-    "typedoc": "^0.15.0",
-    "typescript": "^3.6.3"
+    "ts-node": "^8.5.4",
+    "tslint": "^5.20.1",
+    "typedoc": "^0.15.5",
+    "typescript": "^3.7.3"
   },
   "directories": {
     "test": "test"
@@ -66,7 +58,7 @@
     "autotest": "supervisor --watch index.ts,lib,test --extensions ts --no-restart-on exit --quiet --exec npm -- test",
     "build": "run-s compile test lint doc",
     "clean": "run-p clean:compile clean:test clean:doc clean:run",
-    "clean:compile": "rimraf git-info.json \"index.{d.ts,js}{,.map}\" \"{lib,test}/**/*.{d.ts,js}{,.map}\" lib/typings/types.ts",
+    "clean:compile": "rimraf git-info.json \"*.{d.ts,js}{,.map}\" \"{bin,goals,lib,test}/**/*.{d.ts,js}{,.map}\" lib/typings/types.ts",
     "clean:dist": "run-s clean clean:npm",
     "clean:doc": "rimraf doc",
     "clean:npm": "rimraf node_modules",
@@ -74,7 +66,7 @@
     "clean:test": "rimraf .nyc_output coverage",
     "compile": "run-s git:info gql:gen compile:ts",
     "compile:ts": "tsc --project .",
-    "doc": "typedoc --mode modules --excludeExternals --ignoreCompilerErrors --exclude \"**/*.d.ts\" --out doc index.ts lib",
+    "doc": "typedoc --mode modules --excludeExternals --ignoreCompilerErrors --exclude \"**/*.d.ts\" --out doc *.ts goals/*.ts",
     "git:info": "atm-git-info",
     "gql:gen": "atm-gql-gen",
     "lint": "tslint --config tslint.json --format verbose --project .",
