Update Atomist and TypeScript dependencies
Use K8sContainerFulfiller from sdm-core rather than this
implementation.  Update exported goal names.

--- a/atomist.yaml
+++ b/atomist.yaml
@@ -38,5 +38,5 @@ configuration:
       timeout: 1200000
 ---
 goals:
-  - use: containerDeploy
-  - use: kubernetesDeploy
+  - use: containerFulfill
+  - use: kubernetesDeployFulfill
