--- a/assets/kubectl/sync-gvisor.yaml
+++ b/assets/kubectl/sync-gvisor.yaml
@@ -69,10 +69,10 @@ spec:
       app.kubernetes.io/name: k8s-sdm
       atomist.com/workspaceId: T29E48P34
   strategy:
-    type: RollingUpdate
     rollingUpdate:
       maxSurge: 1
       maxUnavailable: 0
+    type: RollingUpdate
   template:
     metadata:
       labels:
@@ -156,6 +156,7 @@ spec:
           volumeMounts:
             - mountPath: /home/atomist
               name: atomist-home
+      runtimeClassName: gvisor
       securityContext:
         fsGroup: 2866
       serviceAccountName: k8s-sdm
