--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   },
-  "include": ["*.ts", "bin/*.ts", "goals/*.ts", "lib/**/*.ts", "test/**/*.ts"],
+  "include": ["*.ts", "bin/*.ts", "lib/**/*.ts", "test/**/*.ts"],
   "exclude": [".#*"],
   "compileOnSave": true,
   "buildOnSave": false,
