--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@atomist/k8s-sdm",
-  "version": "2.0.0",
+  "version": "1.7.0",
   "description": "Atomist SDM for scheduling and deploying to Kubernetes",
   "author": {
     "name": "Atomist",
@@ -25,11 +25,11 @@
   "main": "./index.js",
   "types": "./index.d.ts",
   "dependencies": {
-    "@atomist/automation-client": "^2.0.0-master.20191226145834",
-    "@atomist/sdm": "^2.0.0-master.20191226140700",
-    "@atomist/sdm-core": "^2.0.0-master.20191221184944",
+    "@atomist/automation-client": "^1.9.0",
+    "@atomist/sdm": "^1.9.0",
+    "@atomist/sdm-core": "^1.9.0",
     "@atomist/sdm-pack-gcp": "0.1.0-master.20200107233243",
-    "@atomist/sdm-pack-k8s": "2.0.0-master.20200128172514",
+    "@atomist/sdm-pack-k8s": "^1.11.0",
     "@types/lodash": "^4.14.136",
     "lodash": "^4.17.15"
   },
