--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
   "devDependencies": {
     "@types/mocha": "^5.2.7",
     "@types/power-assert": "^1.5.0",
+    "@typescript-eslint/eslint-plugin": "^2.23.0",
+    "@typescript-eslint/parser": "^2.23.0",
+    "eslint": "^6.8.0",
     "espower-typescript": "^9.0.2",
     "mocha": "^6.2.0",
     "npm-run-all": "^4.1.5",
@@ -40,7 +43,6 @@
     "rimraf": "^2.6.3",
     "supervisor": "^0.12.0",
     "ts-node": "^8.5.4",
-    "tslint": "^5.20.1",
     "typedoc": "^0.15.6",
     "typescript": "^3.7.4"
   },
@@ -62,7 +64,7 @@
     "doc": "typedoc --mode modules --excludeExternals --ignoreCompilerErrors --exclude \"**/*.d.ts\" --out doc *.ts lib",
     "git:info": "atm-git-info",
     "gql:gen": "atm-gql-gen",
-    "lint": "tslint --config tslint.json --format verbose --project .",
+    "lint": "eslint --ext .ts --ignore-pattern \"*.d.ts\" .",
     "lint:fix": "npm run lint -- --fix",
     "start": "atm-start",
     "test": "mocha --require espower-typescript/guess \"test/**/*.test.ts\"",
