--- a/package.json
+++ b/package.json
@@ -31,27 +31,27 @@
     "lodash": "^4.17.15"
   },
   "devDependencies": {
-    "@types/mocha": "^5.2.7",
-    "@types/power-assert": "^1.5.0",
-    "@typescript-eslint/eslint-plugin": "^2.23.0",
-    "@typescript-eslint/parser": "^2.23.0",
+    "@types/mocha": "^7.0.2",
+    "@types/power-assert": "^1.5.3",
+    "@typescript-eslint/eslint-plugin": "^2.30.0",
+    "@typescript-eslint/parser": "^2.30.0",
     "eslint": "^6.8.0",
     "espower-typescript": "^9.0.2",
-    "mocha": "^6.2.0",
+    "mocha": "^7.1.2",
     "npm-run-all": "^4.1.5",
     "power-assert": "^1.6.1",
-    "rimraf": "^2.6.3",
+    "rimraf": "^3.0.2",
     "supervisor": "^0.12.0",
-    "ts-node": "^8.5.4",
-    "typedoc": "^0.15.6",
-    "typescript": "^3.7.4"
+    "ts-node": "^8.9.1",
+    "typedoc": "^0.17.6",
+    "typescript": "^3.8.3"
   },
   "directories": {
     "test": "test"
   },
   "scripts": {
     "autotest": "supervisor --watch index.ts,lib,test --extensions ts --no-restart-on exit --quiet --exec npm -- test",
-    "build": "run-s compile test lint doc",
+    "build": "run-s clean compile test lint doc",
     "clean": "run-p clean:compile clean:test clean:doc clean:run",
     "clean:compile": "rimraf git-info.json \"*.{d.ts,js}{,.map}\" \"{bin,lib,test}/**/*.{d.ts,js}{,.map}\" lib/typings/types.ts",
     "clean:dist": "run-s clean clean:npm",
@@ -64,7 +64,7 @@
     "doc": "typedoc --mode modules --excludeExternals --ignoreCompilerErrors --exclude \"**/*.d.ts\" --out doc *.ts lib",
     "git:info": "atm-git-info",
     "gql:gen": "atm-gql-gen",
-    "lint": "eslint --ext .ts --ignore-pattern \"*.d.ts\" .",
+    "lint": "eslint --ext .ts .",
     "lint:fix": "npm run lint -- --fix",
     "start": "atm-start",
     "test": "mocha --require espower-typescript/guess \"test/**/*.test.ts\"",
