--- a/package.json
+++ b/package.json
@@ -32,18 +32,21 @@
   "devDependencies": {
     "@types/mocha": "^7.0.2",
     "@types/power-assert": "^1.5.3",
-    "@typescript-eslint/eslint-plugin": "^2.30.0",
-    "@typescript-eslint/parser": "^2.30.0",
-    "eslint": "^6.8.0",
+    "@typescript-eslint/eslint-plugin": "^3.5.0",
+    "@typescript-eslint/parser": "^3.5.0",
+    "eslint": "^7.3.1",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "espower-typescript": "^9.0.2",
     "mocha": "^7.1.2",
     "npm-run-all": "^4.1.5",
     "power-assert": "^1.6.1",
+    "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
     "supervisor": "^0.12.0",
-    "ts-node": "^8.9.1",
-    "typedoc": "^0.17.6",
-    "typescript": "^3.8.3"
+    "ts-node": "^8.10.2",
+    "typedoc": "^0.17.8",
+    "typescript": "^3.9.6"
   },
   "directories": {
     "test": "test"
