--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "main": "./index.js",
   "types": "./index.d.ts",
   "dependencies": {
-    "@atomist/sdm": "2.0.0-master.20200703143927",
+    "@atomist/sdm": "2.0.0-main.20200720194232",
     "@types/lodash": "^4.14.157",
     "lodash": "^4.17.19"
   },
